# xecutbot

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  deploy.sh  devenv.nix  flake.nix  nixos-module.nix  xecut_bot_example.yaml
.sqlx/: query-00e8c169601c75096a0f8dc15bf8253487506205cdc5df116ddaf8ad684c4e7e.json  query-06ebef5002d31f9c2fa4d1b1cf0e6d2c20f7c9359dbd38e8f0aac66a7757bd6f.json  query-0cf9eb60a6c24b49b91ab3df315543adea1f90107e80d9a96feebcdbb7af3c7b.json  query-4212b4347576b369f0d7870cff978069c267cd883bd7e33e993fb16fad7e337b.json  query-6fc19bda5b8c069dd1e22783f11c1adf9876d84a4d619c429e81fe639cda63e0.json  query-b3d00ba02b62f6afcd2ae34fdcb6cb48ee8eee7714b66675c100836d52f5bd25.json  query-b3d044b360b7b7920faa23df46a574fad5b1d97e6fd385e95dfd552e358ffd6c.json  query-b94d93a80c081553494f3c9813052ca9be76c2a219a8003604a7020cb4b6e49a.json  query-cccc608dd9db26abe5b6637d3874e7c2e75cb4fe0c1d4d2b11eba4969417b7bb.json  query-d9c1c3ac0b9adf19af601851c61bc7384a7394528023ee7d6ddb30e76f8f6b62.json  query-ebb6bb206f80ed71b9aa8081e3beb1be5ec2905a8f0472fdf21bb4af96d8827e.json
migrations/: 20250731000823_visit.sql  20250807133226_add_visit_status.sql  20250928184850_status_messages.sql
old/: Dockerfile  docker-compose.yml  main.py
src/: backend.rs  bot.rs  config.rs  lib.rs  main.rs  rest_api.rs  utils.rs  visits.rs
tests/: visits_test.rs
