[package]
name = "xecut_bot"
description = "Xecut hackerspace bot"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hackerspace", "tokio"]
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
config = "0.15"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
