[package]
name = "xecut_bot"
description = "Xecut hackerspace bot"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hackerspace", "tokio"]
version = "0.1.1"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
config = "0.15"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }
chrono = { version = "0.4", features = ["unstable-locales"] }
futures = "0.3"
itertools = "0.14"
clap = { version = "4.5", features = ["derive"] }
